--- a/wordle-solver.ipynb
+++ b/wordle-solver.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert letters at the position which is green\n",
+    "# insert letters at the confirmed position else leave it None\n",
     "letters_position = [None, \"o\", \"u\", None, \"t\"]\n",
     "\n",
     "# all the possible letters\n",
